<resources>
    <string name="app_name">IntroduceSelf</string>
    <string name="id_input">아이디를 입력하세요.</string>
    <string name="pw_input">비밀번호를 입력하세요.</string>
    <string name="name">이름</string>
    <string name="id">아이디</string>
    <string name="pw">비밀번호</string>
    <string name="name_input">이름을 입력하세요.</string>
    <string name="signup">회원가입</string>
    <string name="login">로그인</string>
    <string name="loginErr">아이디/비밀번호를 확인해주세요.</string>
</resources>